# qedsac

./: .gitignore  ACKNOWLEDGMENTS  AUTHORS.md  INSTALL-Windows.md  INSTALL.md  LICENSE  Makefile.in  README.md  VERSION  config.h.in  configure  configure.ac  qedsac.desktop.in
linux/: .gitignore
macos/QEdsac.app/Contents/: Info.plist
macos/QEdsac.app/Contents/Resources/: MacEdsac.icns
src/: .gitignore  Makefile.in  about.cc  about.h  attributes.h  clock.cc  clock.h  debug.h  dial.cc  dial.h  display.cc  display.h  editor.cc  editor.h  edsac.cc  edsac.h  error.h  input.cc  input.h  layout.cc  layout.h  light.cc  light.h  main.cc  menu.cc  menu.h  options.cc  options.h  output.cc  output.h  resources.qrc  settings.cc  settings.h  sound.cc  sound.h  tank.cc  tank.h  tube.cc  tube.h
src/data/Edsac Tapes/Contributed Programs/: Conway.txt  Mandelbrot.txt  PrettyP.txt  Readme.txt  Sieve.txt
src/data/Edsac Tapes/Demonstration Programs/: Cubes.txt  Hello.txt  OXO.txt  Primes.txt  Readme.txt  Squares.txt  TPK.txt
src/data/Edsac Tapes/Postmortem Routines/: PM1.txt  PM3.txt  PM4.txt
src/data/Edsac Tapes/Subroutine Library/: C10.txt  M20.txt  P1.txt  P14.txt  P7.txt  R3.txt  R4.txt  S2.txt  S3.txt
src/data/Edsac Tapes/Tutorial Guide Examples/: Arithmetic.txt
src/data/Edsac Tapes/Tutorial Guide Examples/Cubes Folder/: Cubes Master.txt
src/data/Edsac Tapes/Tutorial Guide Examples/Reciprocals Folder/: Reciprocals+C10.txt  Reciprocals+C7.txt  Reciprocals.txt
src/sounds/: .gitignore
src/tapes/: C7.txt  D6.txt  E2.txt  M3.txt  P6.txt  PM0.txt  PM2.txt  PM5.txt  R1.txt  R2.txt  R9.txt  README  T1.txt  catalog.ini
windows/: cl-build.bat  cl-include-options  cl-library-options  clang32-build.bat  clang32-include-options  clang32-library-options  ming32-build.bat  ming32-include-options  ming32-library-options
